@@ -60,13 +60,19 @@ static const Command snort_cmds[] =
     { "dump_stats", main_dump_stats, "show summary statistics" },
     { "rotate_stats", main_rotate_stats, "roll perfmonitor log files" },
     { "reload_config", main_reload_config, "load new configuration" },
-    { "reload_hosts", main_reload_hosts, "load a new hosts.xml" },
-    { "process", main_process, "process given pcap" },
+
+    // FIXIT-M need to load hosts from dedicated file
+    //{ "reload_hosts", main_reload_hosts, "load a new hosts table" },
+
+    // FIXIT-M rewrite trough to permit updates on the fly
+    //{ "process", main_process, "process given pcap" },
+
     { "pause", main_pause, "suspend packet processing" },
     { "resume", main_resume, "continue packet processing" },
     { "detach", main_detach, "exit shell w/o shutdown" },
     { "quit", main_quit, "shutdown and dump-stats" },
     { "help", main_help, "this output" },
+
     { nullptr, nullptr, nullptr }
 };
 #endif
